# Oct 7, 2025 (1.2.2)
fixed bug that caused incorrect boards to be sent
fixed bug that caused spectators to be unable to load the game when entering after the game had started

# Sep 27, 2025 (1.2.1)
fixed replays not downloading
fixed bug where teams were not eliminated properly

# Sep 26, 2025 (1.2.0)
updated replay engine, the replay feature should be working

# Sep 21, 2025 (1.1.1)
updated credits

# Sep 20, 2025 (1.1.0)
added changelog
released accounts
added version indication