@@ -117,11 +117,11 @@
         <!-- <div id="test"></div> -->
         <meta data-import="/components/accounts/disp.html" />
         <div id="splash-banner">
-            <h1 id="splash-main">Territopple (Alpha 1.2.2)</h1>
+            <h1 id="splash-main">Territopple (Alpha 1.3.0)</h1>
         </div>
         <div id="play-options">
             <input type="button" value="Play Online" onclick="location.href='/play-online'">
-            <input type="button" value="Puzzles" disabled>
+            <input type="button" value="Puzzles" onclick="location.href='/puzzles'">
             <input type="button" value="Reference / Guide" onclick="location.href='/help'">
             <input type="button" value="Watch Replay" onclick="location.href='/replay'">
         </div>
