@@ -95,6 +95,6 @@
         </script>
         <script src="/components/include.js"></script>
         <script src="../helpers/comparse/parsers.js"></script>
-        <script src="/puzzle/puzzle.js"></script>
+        <script src="/puzzle/puzzle.js?rev=1"></script>
     </body>
 </html>
