@@ -1,3 +1,6 @@
+# Oct 13, 2025 (1.3.0)
+released basic puzzle engine
+
 # Oct 7, 2025 (1.2.2)
 fixed bug that caused incorrect boards to be sent
 fixed bug that caused spectators to be unable to load the game when entering after the game had started
